# frontier-static-data

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-ci.yml  zizmor.yml
static_data/: export_starmap.py  get_resfile.py  utils.py
tests/: test_utils.py
tests/test_data/: res_index1  res_index2
